# vision

./: Hackster_Polaroid_Tutorial.md  README.MD
models/: Back Plate - No Screw Hole.3mf  Back Plate - With Screw Holes.3mf  Body.3mf  Button.3mf
projects/film/: camera_helper.ino  file_helper.ino  film.ino  gen_ai_helper.ino  pixelify.c  shake_detection.ino  wifi_helper.ino
projects/film/server/: .example.env  main.py
projects/film/server/images/photo-2/: description.txt
projects/film/server/images/photo-3/: description.txt
projects/film/server/images/photo-4/: description.txt
projects/film/server/images/photo-5/: description.txt
projects/locket/: camera_helper.ino  locket.ino
projects/memory-cue/: camera_helper.ino  memory-cue.ino
projects/polaroid/: camera_helper.ino  gen_ai_helper.ino  polaroid.ino  shake_detection.ino
projects/polaroid/server/: .example.env  main.py  pyproject.toml
projects/streamdiffusion/: streamdiffusion.ino
